[project]
name = "graph-documents"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "langgraph-cli[inmem]>=0.2.10",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/graph_documents"]

[tool.rye.scripts]
start = "langgraph dev"
start2 = "python ./src/graph_documents/graphs/main_graph.py"
